# Edge-Computing

./: README.md  requirements.txt  train_ar_dnn_energyfarm.ipynb  train_ar_dnn_simulation.ipynb  train_arima_energyfarm - p5d1q0.ipynb  train_arima_energyfarm - p5d2q2.ipynb  train_cls_conv1d_fordA.ipynb
ar_wind_farm_arima_exe_file/: data_samples_28k.csv
ar_wind_farm_arima_exe_file/arm64-setable_preds/: CMakeCache.txt  Makefile  cmake_install.cmake  run_model  run_model.sh
ar_wind_farm_arima_exe_file/x86-setable-preds/: input.csv  model.csv  run_model  run_model.sh
ar_wind_farm_dnn_exe_file/arm64-setable_preds/: CMakeCache.txt  Makefile  cmake_install.cmake  run_model
ar_wind_farm_dnn_exe_file/x86-setable-preds/: ar_dnn-w10-l16-l32-l16_windfarm_0620.tflite  run_model  run_model.sh
cls_fordA_conv1d_exe_file/arm64/: CMakeCache.txt  Makefile  cmake_install.cmake  run_model  run_model.sh  sample_idx_1000_lab_0.csv  sample_idx_700_lab_0.csv
cls_fordA_conv1d_exe_file/x86/: run_model  sample_idx_1200_lab_1.csv
cpp/ar_dnn_cpp_demo/arm64/: CMakeLists.txt  ar_dnn-w10-l16-l32-l16_windfarm_0620-std-mean.csv  ar_dnn-w10-l16-l32-l16_windfarm_0620.keras  build.sh  input-dnn.csv  main.cpp
cpp/ar_dnn_cpp_demo/x86/: compile.sh
cpp/arima_cpp_demo/arm64/: CMakeLists.txt  build.sh  main.cpp
cpp/arima_cpp_demo/x86/: compile.sh  copyfile2windows.sh  run_model.sh
cpp/conv1d_cpp_demo/arm64/: build.sh  cls_1dcnn_forda_0612.keras  cls_1dcnn_forda_0612.tflite  main.cpp  sample_idx_200_lab_1.csv  sample_idx_300_lab_0.csv  sample_idx_600_lab_1.csv
